# jhack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .requirements.txt.swp  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README_SNAP.md  bind  helpers.py  jhack.py  justfile  logger.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  snapcraft.yaml  tests.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
charm/: functional.py  init.py  lic_utils.py  repack.py  sync.py  update.py
charm/resources/: apache-long  apache-short
charm/resources/functional-charm/: metadata.yaml
charm/resources/functional-charm/src/: charm.py
jhack/: __init__.py  config.py  helpers.py  logger.py  main.py  nuke.py  pyproject.toml  version.py
jhack/blackpearl/: pyproject.toml
jhack/blackpearl/blackpearl/: logger.py  main.py  tox.ini
jhack/blackpearl/blackpearl/controller/: controller.py
jhack/blackpearl/blackpearl/model/: edge_map.py  jujucli.py  model.py  testing.py  testing_data.py
jhack/blackpearl/blackpearl/view/: app_node.py  controller_node.py  edges.py  graphics_edges.py  helpers.py  model_node.py  node.py  nodes.py  view.py  zvalues.py
jhack/blackpearl/blackpearl/view/resources/: x11_colors.py
jhack/blackpearl/nodeeditor/: __init__.py  node_content_widget.py  node_edge.py  node_edge_dragging.py  node_edge_intersect.py  node_edge_snapping.py  node_edge_validators.py  node_editor_widget.py  node_editor_window.py  node_graphics_edge.py  node_graphics_edge_path.py  node_graphics_node.py  node_graphics_scene.py  node_graphics_socket.py  node_graphics_view.py  node_node.py  node_scene.py  node_scene_clipboard.py  node_scene_history.py  node_socket.py  utils.py
jhack/chaos/: flicker.py  mancioppi.py
jhack/charm/: dispatch_lobo.sh  functional.py  init.py  lobotomy.py  mk8s_fs_mount.py  provision.py  record.py  repack.py  simulate_event.py  sync.py  update.py  utilities.py  vinfo.py  xplore.py
jhack/charm/resources/functional-charm/: charmcraft.yaml  metadata.yaml
jhack/conf/: conf.py  jhack_config_defaults.toml  jhack_config_destructive.toml  jhack_config_yolo.toml
jhack/jinx/: .gitignore  cleanup.py  init.py  install.py  pack.py
jhack/model/: clear.py  remove.py
jhack/mongo/: eson.py  get_credentials_from_k8s_controller.sh  get_credentials_from_machine_controller.sh  mongo.py  query_k8s_controller.sh  query_machine_controller.sh
jhack/scenario/: dict_to_state.py  snapshot.py  state_apply.py  state_to_dict.py  utils.py
jhack/scenario/integrations/: darkroom.py  testing_model_backend.py
jhack/snap/: push_snap.py
jhack/tests/: conftest.py  test_devmode.py
jhack/tests/charm/: test_update.py
jhack/tests/config/: test_config.py  test_get_home_dir.py
jhack/tests/mongo/: test_k8s_connector_manual.py  test_machine_connector_manual.py
jhack/tests/test_scenario/test_snapshot/: test_dict_to_state.py  test_fs_push_pull.py  test_state_apply.py
jhack/tests/utils/: test_crpc.py  test_debug_file_interlace.py  test_list_endpoints.py  test_list_endpoints_kafka.py  test_list_endpoints_keystone.py  test_memo_tools.py  test_nuke.py  test_pull_cmr.py  test_replay_local_runtime.py  test_show_cmr.py  test_show_relation_generic.py  test_show_relation_k8s.py  test_show_relation_machine.py  test_show_stored.py  test_sitrep.py  test_tail.py  test_tail_logs.py
jhack/tests/utils/juju_status_mocks/: ps5.json
jhack/tests/utils/list_endpoints_mocks/: keystone_mysql_router_0_show.yaml
jhack/tests/utils/memo_tools_test_files/: mock_ops.py  trfk-re-relate.json
jhack/tests/utils/tail_mocks/: interlace-log-0.txt  interlace-log-1.txt  interlace-log-combined.txt  (+12 more)
jhack/utils/: .charm_rpc_dispatch.py  charm_rpc.py  charm_rpc_dispatch.py  debug_log_interlacer.py  deployment_graph.py  ffwd.py  file_peeker.py  fire.py  integrate.py  just_deploy_this.py  kill.py  list_endpoints.py  nuke.py  pebble.py  print_env.py  propaganda.py  remote_debug.py  show_relation.py  show_stored.py  simulate_event.py  sitrep.py  sync.py  tail_charms.py  tail_logs.py  this_is_fine.py  unbork_juju  unbork_juju.py  unleash.py
jhack/utils/event_recorder/: client.py  memo_tools.py  payload.py  record.py  recorder.py  runtime.py
jhack/utils/helpers/: gather_endpoints.py
jhack/utils/mock_health_server/: server.py
jhack/utils/tail_charms/: cli.py  tail_charms.py
jinx/: .gitignore  init.py  install.py  pack.py
model/: clear.py  remove.py
snap/: .gitignore  bind  snapcraft.yaml
snap/hooks/: configure
tests/charm/: test_update.py
tests/utils/: test_show_relation_k8s.py  test_show_relation_machine.py
utils/: ffwd.py  pprint_relation.py  reset_juju.py  show_relation.py  sync.py  tail_charms.py  unbork_juju.py  unfuck_juju.py
(+77 files in other folders)
