[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jhack"
version = "0.4.0.7"
authors = [
    { name = "Pietro Pasotti", email = "pietro.pasotti@canonical.com" }
]
description = "Chock-full of Juju hackery."
license.text = "Apache 2.0"
keywords = ["juju", "hacks", "cli", "charm", "charming"]
urls.Source = "https://github.com/PietroPasotti/jhack"
dependencies = [
    "ops-scenario(==6.0)",
    "typer(==0.7.0)",
    "ops(>=2.8)",
    "black",
    "rich(==13.3.0)",
    "parse(==1.19.0)",
    "urllib3(==1.25)",
    "requests(==2.29.0)",
    "requests-unixsocket(==0.3.0)",
    "asttokens",
    "astunparse",
    "toml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
jhack = "jhack.main:main"

[tool.setuptools.package-dir]
jhack = "jhack"

[tool.ruff]
line-length = 99

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = "black"
